--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -166,13 +166,13 @@ Following up on our corpus findings, we then explore the idea that contextual pr
 
 \ndg{Oy, this section is still long and meandering. it should be half this length.}
 
-Composing with a plurality, some gradable predicates either receive a {distributive} or a {collective} interpretation. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole.
+Some gradable predicates (e.g., \emph{heavy}) are transparently ambiguous in plural predications. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole, commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 
 \ex. The boxes are heavy.
 \a. The boxes each are heavy. \hfill \textsc{distributive}
 \b. The boxes together are heavy. \hfill \textsc{collective}
 
-In this latter case, where we collectively ascribe a gradable property directly to a plurality, the resulting interpretation involves sum-based aggregation strategies: if a set of boxes together holds the property of being heavy, it follows that their total weight counts as heavy \citep{scha1984}.\footnote{For now we set aside the possibility of mean-based aggregation strategies, demonstrated for plural comparisons of size by \cite{scontrasetal2012}. Given the effect of contextual predictability on sum-based aggregation strategies that we herewith elucidate, the previously demonstrated mean-based strategies likely result from an experimental context that suggested collective interpretations for \emph{bigger} and a recognition on the part of participants that average size was sufficiently predictable in that context. \ndg{perhaps move this to discussion and discuss more transparently?}} The reading becomes more transparent when we add a collective particle like \emph{together}, as in \Last[b]. Crucially, a collective reading can be true when the distributive reading is false: many light boxes may together count as heavy. These two diverging interpretations suggest a semantics for the gradable predicate \emph{heavy} under which it applies both to singular objects and pluralities in its basic denotation; it is a mixed predicate (cf.~the example \emph{build a raft} from \citealp{link1983}). 
+%In this latter case, where we collectively ascribe a gradable property directly to a plurality, the resulting interpretation involves sum-based aggregation strategies: if a set of boxes together holds the property of being heavy, it follows that their total weight counts as heavy \citep{scha1984}.\footnote{For now we set aside the possibility of mean-based aggregation strategies, demonstrated for plural comparisons of size by \cite{scontrasetal2012}. Given the effect of contextual predictability on sum-based aggregation strategies that we herewith elucidate, the previously demonstrated mean-based strategies likely result from an experimental context that suggested collective interpretations for \emph{bigger} and a recognition on the part of participants that average size was sufficiently predictable in that context. \ndg{perhaps move this to discussion and discuss more transparently?}} The reading becomes more transparent when we add a collective particle like \emph{together}, as in \Last[b]. Crucially, a collective reading can be true when the distributive reading is false: many light boxes may together count as heavy. These two diverging interpretations suggest a semantics for the gradable predicate \emph{heavy} under which it applies both to singular objects and pluralities in its basic denotation; it is a mixed predicate (cf.~the example \emph{build a raft} from \citealp{link1983}). 
 
 The collective interpretation available to \emph{heavy} proves elusive for most other gradable predicates. A speaker is hard-pressed to use the sentence in \Next to say of the boxes that their total size is large.
 
@@ -183,49 +183,14 @@ The collective interpretation available to \emph{heavy} proves elusive for most 
 
 Size and shape adjectives (e.g., \emph{tall}, \emph{long}, \emph{round}) resist collective interpretations. \cite{schwarzschild2011} terms them ``stubbornly distributive,'' signaling the lack of collective interpretations. \citet{zhang2013} labels this class of predicates ``delimitable,'' highlighting their usage to describe physical extents. Supporting the robustness of this phenomenon, \cite{syrett2015} finds evidence of stubborn distributivity in children as young as 3 years of age.
 
-In his discussion of the contrast, \citet{quine1960} describes stubbornly distributive predicates like \emph{big} in \Last as ``not cumulative,'' drawing a parallel with the nominal domain: just as a count noun like \emph{boxes} insistently ``divides its reference'' among individual boxes (in contrast to mass nouns like \emph{water} which are aggressively cumulative, referring to maximal salient quantities of water), so too do stubbornly distributive predicates divide their predication to individuals. \citeauthor{quine1960}'s characterization of the phenomenon prefigures the formal semantics that follows him. Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members. Semanticists hold that stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates.}
+%In his discussion of the contrast, \citet{quine1960} describes stubbornly distributive predicates like \emph{big} in \Last as ``not cumulative,'' drawing a parallel with the nominal domain: just as a count noun like \emph{boxes} insistently ``divides its reference'' among individual boxes (in contrast to mass nouns like \emph{water} which are aggressively cumulative, referring to maximal salient quantities of water), so too do stubbornly distributive predicates divide their predication to individuals. \citeauthor{quine1960}'s characterization of the phenomenon prefigures the formal semantics that follows him. 
 
-%\citet{schwarzschild2011} uses the failed correspondences in \Next to illustrate one strategy in drawing out the failed collective reading for these gradable predicates: replacing the definite plural subject noun with a singular group/collective noun \citep[i.e., an atomizer;][]{scontras2014diss}. Intuitively, these collective nouns transform the plurality (e.g., the boxes) into a single individual (e.g., a pile), which readily composes with the gradable predicate.\\
-%
-%\noindent \begin{minipage}{.45\textwidth}
-%	\ex.
-%	The boxes are large.\\
-%	The phone calls were long.\\
-%	The papers are round.
-%	
-%\end{minipage}
-%\begin{minipage}{.05\textwidth}
-%	$\neq$
-%\end{minipage}
-%\begin{minipage}{.5\textwidth}
-%	The pile of boxes is large.\\
-%	The series of phone calls was long.\\
-%	The arrangement of papers is round.
-%\end{minipage}\\[5pt]
-%
-%\noindent Crucially, these collective nouns are used the fix the physical arrangement of the named plurality (a pile is a pile by virtue of its shape), and as a result collective predication succeeds.  
-%
-%Descriptively, stubbornly distributive gradable predicates pattern with the singular-seeking distributive predicates like \emph{see} that we encountered above: they resist taking pluralities as arguments, which precludes collective predication, but is perfectly compatible with distributing the property over members of the plurality.
-%Supporting the idea that stubbornly distributive gradable predicates refuse all but singular individuals from their basic denotations, \cite{schwarzschild2011} observes that mass nouns, which do not refer (at any accessible level) to singularities, are often infelicitous as arguments to these predicates.
-%
-%\ex. \# The $\left\{\begin{array}{l}\text{wine}\\ \text{snow}\\ \text{traffic}\end{array}\right\}$ is big.
-%
-%\citeauthor{schwarzschild2011} notes that  the facts in \Last crucially do not lead to the conclusion that mass nouns refer to simple pluralities \citep[cf., e.g.,][]{chierchia1998mass}. If the denotation of a mass noun was simply a collection of parts, then we should in principle be permitted to distribute the relevant property over its (minimal) parts. Moreover, the more individuated the substance named  \citep[i.e., the less strongly-self-connected in the sense of][]{grimm2012}, the more felicitous the combination of mass nouns with stubbornly distributive predicates; fake mass nouns with clear minimal parts are fine, as are atomic substances (\citeauthor{grimm2012}'s ``aggregates''). Only those mass nouns without accessible, stable minimal parts like \emph{water} or \emph{blood} are truly incompatible with these predicates.
-%
-%\ex. \a. The furniture is big. \hfill \emph{fake mass noun}\\
-%The mail is square.
-%\b. The grass is long. \hfill \emph{aggregate}\\
-%The rice is round.
-%
-%Refining the description of stubborn distributivity, it would appear that these predicates presuppose the (at least conceptual) atomicity of their arguments: we have to know what physically counts as an atom in order to distribute some physical property to it. The general mechanism remains the same: stubbornly distributive predicates refuse all but individual objects from their basic denotations.
-
-But stating that stubbornly distributive predicates do not contain in their basic denotations pluralities of individuals (in line with notionally distributive predicates like \emph{have blue eyes} or \emph{be a man}; \citealp{link1983}) serves merely to describe the phenomenon, not to explain it. \ndg{awk}
-Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; collective size is not such a property, at least not transparently so. There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights.
-
-\ex. \a. The group of men has blue eyes. 
-\b. The pile of boxes is tall.
-
-Rather than roaming the lexicon with name tags specifying their attitudes toward collective interpretations, something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is. 
+Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members \citep{link1983}. Semanticists hold that stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates.}
+However, stating that stubbornly distributive predicates do not compose directly with pluralities serves merely to describe the phenomenon, not to explain it.
+%Since \cite{link1983}, semanticists have been aware of necessarily distributive predicates like \emph{have blue eyes} or \emph{be a man}.  \ndg{awk} Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity. But collective size is not such a property, at least not transparently so. There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights.
+%\ex. \a. The group of men has blue eyes. 
+%\b. The pile of boxes is tall.
+Something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is. 
 
 %\subsection{The role of context in plural predication}
 
@@ -234,29 +199,33 @@ Rather than roaming the lexicon with name tags specifying their attitudes toward
 
 %Not all predicates are so permissive in their interpretations: \textit{the boxes are big} is said to communicate only about individual box size; the collective interpretation whereby speakers communicate about total set size is claimed to be absent (or at least extremely hard to come by). Other size and shape predicates are said to behave similarly.
 
-Understanding why (and whether) stubbornly distributive predicates like \emph{big} pattern separately from what we will call ``complaisantly collective'' predicates like \emph{heavy} requires a closer look at the differences between these classes of predicates. The salient different between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} seems to be the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight, whereas the latter names a collective property that could change with every new arrangement of the individuals said to hold it. To change the collective weight of a set, one would have to change the weight of an individual member. Not so for collective size, which may change {without} any change to the size of an individual member. Thus, something about the instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates.
+%Understanding why (and whether) stubbornly distributive predicates like \emph{big} pattern separately from what we will call ``complaisantly collective'' predicates like \emph{heavy} requires a closer look at the differences between these classes of predicates. 
+The salient different between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} seems to be the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight, whereas the latter names a collective property that could change with every new arrangement of the individuals said to hold it. To change the collective weight of a set, one would have to change the weight of an individual member. Not so for collective size, which may change {without} any change to the size of an individual member. The instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises.
 
 %Consider the complaisantly collective predicate \emph{heavy}, which names the property of being heavy. 
-With a plural subject under a collective construal, \emph{heavy} comments on total set weight.  Suppose we encounter a set of boxes piled one on top of the other. Those boxes will have a collective weight, and depending on that weight those boxes may or may not count as collectively heavy. Now, suppose we encounter that same set of boxes, this time lined up one next to the other. Despite changing the physical arrangement of the set of boxes, their weight remains the same.  Collective weight is a stable property of sets. Another complaisantly collective predicate, \emph{voluminous}, behaves similarly: the volume of a set of objects remains unchanged despite varying physical arrangement. So too for \emph{expensive} and any other complaisantly collective gradable predicate: the collective property is regular and predictable on the basis of context; rearranging the members of a plurality has no effect on the collective property itself.
+%With a plural subject under a collective construal, \emph{heavy} comments on total set weight.  Suppose we encounter a set of boxes piled one on top of the other. Those boxes will have a collective weight, and depending on that weight those boxes may or may not count as collectively heavy. Now, suppose we encounter that same set of boxes, this time lined up one next to the other. Despite changing the physical arrangement of the set of boxes, their weight remains the same.  Collective weight is a stable property of sets. Another complaisantly collective predicate, \emph{voluminous}, behaves similarly: the volume of a set of objects remains unchanged despite varying physical arrangement. So too for \emph{expensive} and any other complaisantly collective gradable predicate: the collective property is regular and predictable on the basis of context; rearranging the members of a plurality has no effect on the collective property itself.
 
-Next, consider the stubbornly distributive predicate \emph{big}. Unlike with \emph{heavy}, the collective property named by \emph{big} (i.e., collective size) will depend crucially on the physical arrangement of the boxes said to hold it. Suppose we evaluate collective size by determining area in a 2D plane.\footnote{Indeed, there are many ways to evaluate the property of collective size: we could measure the total space some objects take up (including negative space), the volume the objects displace, their total width, their height, etc. This indeterminacy of dimension also contributes to the decreased contextual predictability of collective size.} Collective size does not persist against a changing arrangement of the set of boxes; change the physical arrangement of the set, and you will have changed its collective size. In many cases, for speakers and listeners to arrive at the same judgments about collective size, they need to encounter the same arrangement of objects. The same applies to the other properties named by stubborn distributive predicates, properties of physical extent.
+%Next, consider the stubbornly distributive predicate \emph{big}. Unlike with \emph{heavy}, the collective property named by \emph{big} (i.e., collective size) will depend crucially on the physical arrangement of the boxes said to hold it. Suppose we evaluate collective size by determining area in a 2D plane.\footnote{Indeed, there are many ways to evaluate the property of collective size: we could measure the total space some objects take up (including negative space), the volume the objects displace, their total width, their height, etc. This indeterminacy of dimension also contributes to the decreased contextual predictability of collective size.} Collective size does not persist against a changing arrangement of the set of boxes; change the physical arrangement of the set, and you will have changed its collective size. In many cases, for speakers and listeners to arrive at the same judgments about collective size, they need to encounter the same arrangement of objects. The same applies to the other properties named by stubborn distributive predicates, properties of physical extent.
 
-Here it bears noting that the divide between stubbornly distributive and complaisantly collective predicates might not be so sharp as the comparison between \emph{heavy} and \emph{big} suggests. Take \emph{tall}. The predicate suggests a single, canonical strategy for evaluation: distance from the ground. However, the property does not persist despite changing physical arrangement: changing the arrangement of a set potentially changes its total distance from the ground. Still, encountering a set of boxes, it often feels perfectly felicitous to discuss their collective height using a sentence like \emph{The boxes are tall}. But note that crucial to the collective interpretation of this sentence is a specific and salient physical arrangement of boxes; an abstract set of boxes does not hold the property of being tall, but some specific arrangements of it might.
+%Here it bears noting that the divide between stubbornly distributive and complaisantly collective predicates might not be so sharp as the comparison between \emph{heavy} and \emph{big} suggests. Take \emph{tall}. The predicate suggests a single, canonical strategy for evaluation: distance from the ground. However, the property does not persist despite changing physical arrangement: changing the arrangement of a set potentially changes its total distance from the ground. Still, encountering a set of boxes, it often feels perfectly felicitous to discuss their collective height using a sentence like \emph{The boxes are tall}. But note that crucial to the collective interpretation of this sentence is a specific and salient physical arrangement of boxes; an abstract set of boxes does not hold the property of being tall, but some specific arrangements of it might.
 
-We appear to have a continuum of stubborn distributivity, or, perhaps better put, a continuum of collectivity for gradable predicates. At issue is the contextual predictability of the collective property these predicates name, which determines how noisy the collective interpretations will be. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises. %In other words, our---speakers' and listeners'---judgments about the truth of a collective interpretation might not align for stubbornly distributive predicates if we do not encounter the same arrangement of individuals. 
+%We appear to have a continuum of stubborn distributivity, or, perhaps better put, a continuum of collectivity for gradable predicates. At issue is the contextual predictability of the collective property these predicates name, which determines how noisy the collective interpretations will be. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises. %In other words, our---speakers' and listeners'---judgments about the truth of a collective interpretation might not align for stubbornly distributive predicates if we do not encounter the same arrangement of individuals. 
 %Noisy collective interpretations are less useful at communicating the speaker's intended message; they should therefore be less likely. With complaisantly collective predicates, the named properties are maximally predictable and therefore their collective interpretations are minimally noisy. These interpretations are therefore more likely.
+
 Here is the hypothesis: collective interpretations are susceptible to varying amounts of noise depending on the contextual predictability of the property at issue; less predictable collective properties yield noisier collective interpretations because judgments by speakers and listeners might not align. Language is used to communicate. Speakers aspire toward clarity in this process of communication. With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. To communicate effectively and avoid possible confusion, collective interpretations should be avoided in the case of such noisy predicates; distributive interpretations are the safe bet. In other words, collective interpretations become less likely as contextual predictability of the collective property----that is, the retrievability of the intended message---decreases. 
 
-The introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective interpretations: if physical arrangements are less likely to change, collective properties become more predictable on the basis of context, and so collective interpretations become less noisy. As a result, these interpretations become more useful, and therefore more likely. This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
+%The introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective interpretations: 
+If physical arrangements are less likely to change, collective properties become more predictable on the basis of context, and so collective interpretations become less noisy. As a result, these interpretations become more useful, and therefore more likely. This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
 Finding such a connection between contextual predictability of collective properties and rates of collective interpretations for stubbornly distributive predicates, we would have evidence that the phenomenon of stubborn distributivity is not a simple lexical distinction, but rather emerges as a result of rational inferences between speakers and listeners as they endeavor to communicate efficiently. %Moreover, given that complaisantly collective predicates name properties that are already maximally predictable, we should not expect to be able to increase the contextual predictability of their collective properties and thereby increase their rates of collective interpretations.
 
-Once we consider the complex interaction between speakers and listeners in the disambiguation of plural predication, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{tall} vs.~\emph{heavy}). Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. As with contextual predictability, we test this intuition experimentally below.  
+Once we consider the complex interaction between speakers and listeners in the disambiguation of plural predication, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{tall} vs.~\emph{heavy}). Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. %As with contextual predictability, we test this intuition experimentally below.  
 
 %Contextual predictability affects availability of collective interpretations to the extent that speakers and listeners attend to each other as they communicate: unpredictable properties are poor candidates for efficient communication, given the amount of increased coordination they necessitate. Once we start 
 One last level of context remains: the immediate discourse context, specifically properties of the speakers and listeners themselves. As with world and linguistic context, this factor determines not the possible, but the \emph{probable} interpretations of plural predications: changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
-If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' Imagine that a speaker lifts a set of boxes altogether (not individually), and that a listener sees this. Weight is not a visually assessable property, so the speaker would lack access the individual box weights. If the speaker then tells the listener that the boxes were heavy, the listener ought to be able to reason about the limited epistemic state of the speaker to conclude that the speaker intended a collective interpretation: the speaker lacked information that would verify a distributive interpretation, so he must not have intended it.  
+If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
+%Imagine that a speaker lifts a set of boxes altogether (not individually), and that a listener sees this. Weight is not a visually assessable property, so the speaker would lack access the individual box weights. If the speaker then tells the listener that the boxes were heavy, the listener ought to be able to reason about the limited epistemic state of the speaker to conclude that the speaker intended a collective interpretation: the speaker lacked information that would verify a distributive interpretation, so he must not have intended it.  
 %Thus, while the predictability of collective weight remains a stable property of the context, we may further privilege collective interpretations by limiting speakers' access to the evidence they would need to verify a distributive interpretation. 
-Conversely, we may privilege distributive interpretations by highlighting distributive knowledge, for example by watching a speaker pick up boxes one at a time. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate. 
+%Conversely, we may privilege distributive interpretations by highlighting distributive knowledge, for example by watching a speaker pick up boxes one at a time. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate. 
 %Note that because properties of physical extent are visually assessable (and therefore accessible), we cannot manipulate speakers' knowledge of them so easily. If a speaker can see the boxes, he can see both their individual sizes and shapes, as well as their collective size and shape. Contrary to the predictions of contextual predictability, here we would expect to find an effect of speaker access to knowledge for complaisantly collective, but not stubbornly distributive predicates.
 
 To test these various predictions concerning the role of context in plural predication, we must first establish a way of studying plural predication experimentally; that is, a way to unambiguously access distributive vs.~collective interpretations. In Expt.~1, we show that the particles \emph{each} and \emph{together} reliably disambiguate plural predication. %In Expt.~2, we apply this disambiguation method to a broad range of linguistic contexts from naturally-occurring examples of plural predication from corpora. In Expt.~3, we again employ this disambiguation method, this time directly manipulating contextual predictability and speaker access to knowledge.
